force-app/main/default/objects/Account_Coupon__c/Account_Coupon__c.object-meta.xml
<CustomObject>
    <label>Account Coupon</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Account Coupon Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Coupons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>